horgand ChangeLog




== v1.12 (  /  /2007) ==
--------------------------------------------------------------------------------------------
- Fix widget positions.
- Remember last saved Bank.
- Fixed bug in command line.
- Fixed bug initiating ryhthms.
- Default buffer 256
- Fixed jack crash for non-statig libxpm hints.




== v1.11 (30/08/2007) ==
--------------------------------------------------------------------------------------------
- Added FLTK options on command line.
- Added window icon. 
- Normalize volumes.
- Removed Keyboard Level Scaling.
- Prevent to load old format files.
- Fixed Preset at first time bug.
- Fixed Master Volume bug.
- Added organ transpose.
- Adjust linear interpolation in chorus effect. 
- Drawbars in stereo mode for better sound.
- Preset adjust.
- Bank/Sound format file changed.
- Synth engine parameters can be edited and stored for each preset.
- More tremolo power.





== v1.10 (20/08/2007) ==
--------------------------------------------------------------------------------------------
- Normalize Volumes.
- Solve bug on Compare.
- Adjust presets.
- Small visual changes.
- Each drawbar can be managed as percussion.
- Visual and program settings saved and restored.
- Optimized some $prefix things.
- New Tremolo.
- Rottary and Chorus now can coexist.
- New Chorus and new buffer for variable delay Effects
- Small code optimization.
- More code changes to prevent crashes with RT-Kernels.
- Better Jack support reducing CPU usage.




== v1.09 (05/08/2007) ==
--------------------------------------------------------------------------------------------
- Code optimized.
- Presets modified.
- Improved some compile options.
- Upgraded to Make Tools 1.7
- Maintain split status on program change.
- Bass type is selected when program starts ( Krzysztof Foltman).
- Fixed FLTK search on Make Tools scripts (Krzysztof Foltman).
- Fixed crash on RT-Kernels.
- Less memory ( 8 Mb) usage.
- DSP Effects Improved.
- New ADSR.
- Attack removed.